Add padding and margin to sidebar, add padding to images
Co-authored-by: JaredGran <jared.carper@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,12 @@
   width: 30%;
   float: right;
   background-color: turquoise;
+  box-sizing: border-box;
+  margin: 20px;
+  padding: 20px;
 }
 img {
   float: left;
-  width: 200px;
+  width: 400px;
+  padding: 20px;
 }
